--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>Codewars Challenges</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		
+		<h1>Codewar challenges</h1>
+		<h2>Open up console to see challenges and solutions</h2>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
